[package]
name = "icingacli"
version = "0.1.2"
authors = ["William Fleming"]
description = "CLI client for interacting with the icinga api"
license = "Apache-2.0"
homepage = "https://github.com/deltaDNA/icingacli"
repository = "https://github.com/deltaDNA/icingacli"

[dependencies]
reqwest = "0.6.2"
toml = "0.4.1"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
clap = {version = "2.25", features = ["yaml"]}

[[bin]]
doc = false
name = "icingacli"
path = "src/bin/icingacli.rs"
